[Style]: Fixed padding for Turn info that causes overlapping of text and line box

--- a/style.css
+++ b/style.css
@@ -317,8 +317,9 @@ input:disabled {
         font-size: 2.25vw
     }
     .turn-info {
-        font-size: 3.5vw;
+        font-size: 3vw;
         line-height: 3rem;
+        padding: 1em 1.5em 1em 1.5em;
     }
 }
 @media only screen and (min-width: 830px) and (max-width: 970px) {
@@ -339,7 +340,7 @@ input:disabled {
         line-height: 3rem;
     }
 }
-@media only screen and (min-width: 971px) and (max-width: 1130px) {
+@media only screen and (min-width: 971px) and (max-width: 1100px) {
     body {
         width: 60vw;
     }
@@ -357,8 +358,15 @@ input:disabled {
         line-height: 3rem;
     }
 }
-@media only screen and (min-width: 1131px) {
+@media only screen and (min-width: 1101px) and (max-width: 1500px) {
+    body {
+        width: 65vw;
+    }
     .tiles-container {
         width: 20vw;
+    }
+    .turn-info {
+        font-size: 1.6vw;
+        padding: 2em;
     }
 }
